Limpeza em builds e configs